fixed AI, added 2 player support. calling it good
